--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css.map">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/dc.css"/>
+    
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/style.css"> NO VOLVER A DESCOMENTAR-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/dc.css"/>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 </head>
@@ -48,12 +50,11 @@
 
   </header>
     <section class="container title">Prueba grafico de barras
-      <div id="graficaBarrasVentas"></div>
+        <div id="graficaBarrasVentas"></div>
     </section>
     <section id="seccion1" class="container title">Prueba grafico de lineas
-      <div id="graficaCompositeLineas"></div>
+        <div id="graficaCompositeLineas"></div>
     </section>
-
 
 <!-- JAVASCRIPTS -->
     <script type="text/javascript" src="js/promise-polyfill.js"></script>
@@ -65,5 +66,6 @@
     <script type="text/javascript" src="js/dc.js"></script>
     <script type="text/javascript" src="js/composite-chart.js"></script>
     <script type="text/javascript" src="intento.js"></script>
+   
 </body>
 </html>
