Prueba scripts scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="scroll.css">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <script src="scrollPrueba.js"></script> 
 
 </head>
 <body>
@@ -47,11 +49,13 @@
           </div>
 
   </header>
-    <section class="container title">Prueba grafico de barras
+    <section id="seccion" class="container title">Prueba grafico de barras
       <div id="graficaBarrasVentas"></div>
     </section>
-    <section id="seccion1" class="container title">Prueba grafico de lineas
+    <section id="seccion" class="container_title2">Prueba grafico de lineas
       <div id="graficaCompositeLineas"></div>
+    </section>
+    <section id="seccion" class="container title">Prueba secciones 1
     </section>
 
 
@@ -60,6 +64,7 @@
     <script type="text/javascript" src="js/fetch.umd.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="jquery.scrollify.js"></script>
     <script type="text/javascript" src="js/d3.js"></script>
     <script type="text/javascript" src="js/crossfilter.js"></script>
     <script type="text/javascript" src="js/dc.js"></script>
