--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <!--<link rel="stylesheet" type="text/css" href="css/style.css"> NO VOLVER A DESCOMENTAR-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="scroll/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/dc.css"/>
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <link rel="json" type="json" href="scroll/jquery.scrollify.json">
@@ -74,28 +73,8 @@
     <script type="text/javascript" src="js/composite-chart.js"></script>
     <script type="text/javascript" src="intento.js"></script>
     <script type="text/javascript" src="scroll/jquery.scrollify.js"></script>
-<script>
-        $(function(){
-          $.scrollify({
-    section : "section",
-    /*sectionName : "section-name",*/
-    interstitialSection : "",
-    easing: "easeOutExpo",
-    scrollSpeed: 1100,
-    offset : 0,
-    scrollbars: true,
-    standardScrollElements: "",
-    setHeights: true,
-    overflowScroll: true,
-    updateHash: true,
-    touchScroll:true,
-    before:function() {},
-    after:function() {},
-    afterResize:function() {},
-    afterRender:function() {}
-  });
-        });
-    </script>
+    <script type="text/javascript" src="scroll/scrollify.js"></script>
+
    
 </body>
 </html>
