Correciones y cambio de letra

--- a/index.html
+++ b/index.html
@@ -734,13 +734,14 @@
                     <p class="small">The End</p>
                 </div>
             </div>
-        </div>
+        </div>      
         <div class="row">
             <div class="col-md-12">
-                <p style="text-align:justify">
+                <br><br><br><br><br><br><br><br><br><br>
+                <p style="text-align:justify;font-size:40px">
                 Tras la realización de este trabajo de documentación podemos ver la importancia de presentar los datos de una forma que resulta atractiva e interactiva
                 para el usuario con el fin de que la navegación le resulte interesante y capte su atención. Realizar este proyecto mediante Scrollytelling nos ha hecho
-                plantearnos como presentar unos datos de forma escalonada ayudandonos del scroll y contar una historia la mismo tiempo.
+                plantearnos como presentar unos datos de forma escalonada ayudandonos del scroll y contar una historia al mismo tiempo.
                 </p>
             </div>
         </div>        
